added link and text

--- a/index.html
+++ b/index.html
@@ -29,25 +29,27 @@
             <h2 class="subtitle">Social Distancing to Save Lives</h2>
             <br />
             <p class="paragraph">
-              I'm baby asymmetrical tumblr edison bulb, street art gluten-free
-              godard swag fam tattooed banh mi freegan mixtape narwhal cardigan.
-              Cliche mumblecore chartreuse, art party occupy ugh polaroid
-              thundercats vinyl disrupt. Photo booth mixtape direct trade next
-              level air plant quinoa kinfolk typewriter disrupt health goth
-              master cleanse. Meggings photo booth blog hot chicken, raw denim
-              portland fingerstache fixie narwhal.
+              Social distancing, also called “physical distancing,” means
+              keeping space between yourself and other people outside of your
+              home.
+            </p>
+
+            <p>
+              To practice social or physical distancing: Stay at least 6 feet (2
+              meters) from other people. Do not gather in groups. Stay out of
+              crowded places and avoid mass gatherings.
             </p>
             <p class="paragraph">
-              Synth XOXO dreamcatcher, ennui truffaut leggings cray polaroid
-              mumblecore stumptown green juice sustainable viral fingerstache
-              salvia. Migas humblebrag unicorn lomo ethical wayfarers flannel
-              direct trade man braid cardigan pabst celiac gastropub. Actually
-              DIY kitsch, green juice brooklyn godard fixie meh bitters beard
-              put a bird on it af marfa vape pop-up. Venmo skateboard ugh af
-              quinoa YOLO PBR&B letterpress iPhone edison bulb bushwick everyday
-              carry fingerstache VHS. Listicle try-hard deep v franzen umami.
+              <p> <b>Stay connected while staying away.</b> It is very important to stay in touch with friends and family that don’t live in your home. Call, video chat, or stay connected using social media. Everyone reacts differently to stressful situations and having to socially distance yourself from someone you love can be difficult.
+            </p> 
+            <br>
+              <p> 
+                Although the risk of severe illness may be different for everyone, anyone can get and spread COVID-19. Everyone has a role to play in slowing the spread and protecting themselves, their family, and their community.
+              </p>
             </p>
-            <a href="#" class="cta">Learn more &rarr;</a>
+            <a href="https://www.cdc.gov/coronavirus/2019-ncov/" class="cta"
+              >Learn more &rarr;</a
+            >
           </div>
         </div>
       </div>
